i18n // Typo fix (cht): 透過 -> 藉由.

--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -1923,7 +1923,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "在 macOS/iOS 上更改應用程式的 UI 語言設定時，應用程式需要重新啟動，以確保新的語言設定生效。即使使用者透過系統設定手動更改語言設定，仍然會提示需要重新啟動應用程式，且屆時這個提示將由 macOS/iOS 系統來發出，而非敝應用程式。\n\n我們在這裡設置了語言切換器，以幫助使用者節省幾秒鐘的時間。這種設計對於有注意力缺陷渙散障礙（ADHD）患者非常友善，因為 ADHD 患者在翻閱 iOS/macOS 系統設定中的多層頁面時，往往容易徹底忘記他們原本要做的事情。\n\n確認此訊息後，應用程式將會退出。"
+            "value" : "在 macOS/iOS 上更改應用程式的 UI 語言設定時，應用程式需要重新啟動，以確保新的語言設定生效。即使使用者藉由系統設定手動更改語言設定，仍然會提示需要重新啟動應用程式，且屆時這個提示將由 macOS/iOS 系統來發出，而非敝應用程式。\n\n我們在這裡設置了語言切換器，以幫助使用者節省幾秒鐘的時間。這種設計對於有注意力缺陷渙散障礙（ADHD）患者非常友善，因為 ADHD 患者在翻閱 iOS/macOS 系統設定中的多層頁面時，往往容易徹底忘記他們原本要做的事情。\n\n確認此訊息後，應用程式將會退出。"
           }
         }
       }
